--- a/css/index.css
+++ b/css/index.css
@@ -45,13 +45,19 @@ body {
 a {
     text-decoration: none;
     font-family: var(--font-title);
-    background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  
+    color: #302F4D;
+    /* background: linear-gradient(to right, #0f2027, #203a43, #2c5364); */
+    /* -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; */  
 }
 
-ul {
+a:hover {
+    color: #FF5376;
+}
+
+ol, ul {
+    padding-left: 0;
+    margin-bottom: 0;
     list-style-type: none;
 }
 
@@ -112,23 +118,23 @@ nav ul a:hover {
 /* MAIN */
 
 main {
-    margin: 0 auto;
-    max-width: 1200px;
+    /* margin: 0 auto;
+    max-width: 1200px; */
     margin-top: var(--spacing-medium);
 }
 
 /* CARDS */
 
 
-.cards {
+/* .cards {
     display: flex;
     flex-direction: row;
     gap: 1rem;
     justify-content: center;
-}
+} */
 
 .box__info {
-    padding: var(--spacing-medium);
+    /* padding: var(--spacing-medium); */
     display: flex;
     flex-direction: column;
     gap: var(--spacing-xsmall);
@@ -149,14 +155,14 @@ main {
     color: var(--text-color);
     font-size: var(--text-base);
 }
-
+/* 
 .box {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     flex: 1 1 clamp(250px, 100%, 400px);
     transition: all .3s linear;
-}
+} */
 
 .box:hover ~ .box .box__img {
     filter: brightness(.7);
@@ -282,9 +288,9 @@ footer {
 
 @media screen and (max-width: 480px) {
     
-    .cards {
+    /* .cards {
         flex-direction: column;
-    }
+    } */
 
     .gallery {
         display: grid;
